--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,18 @@ services:
     build: .
     ports:
       - "5000:5000"
-    # depends_on:
-    #   - redis
+    depends_on:
+      - redis
     volumes:
       - .:/code
     environment:
       # Makes flask to reload code on change
       FLASK_ENV: development
-      # REDIS_HOST: redis
-      # REDIS_PORT: 6379
-#   redis:
-#     image: redis:6.0-rc4-alpine
-#     volumes:
-#       - "redis-data:/data"
-# volumes:
-#   redis-data:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+  redis:
+    image: redis:6.0-rc4-alpine
+    volumes:
+      - "redis-data:/data"
+volumes:
+  redis-data:
