--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 - make image
 
 before_deploy:
-- docker login -u '$(shell echo $$DOCKER_USER)' -p '$(shell echo $$DOCKER_PASS)'
+- make login
 
 deploy:
 - provider: script
